@@ -43,29 +43,35 @@ public class ReviewServiceImpl implements ReviewService {
     @Override
     @Transactional
     public ResponseEntity<ApiResponseDto> postReview(ReviewRequestDto requestDto, String userId) {
+        System.err.println("==== [DEBUG] postReview called userId=" + userId);
 
         // ===== ユーザー存在チェック =====
         User user = userRepository.findByUserId(userId)
                 .orElseThrow(() -> new IllegalArgumentException("ユーザーが存在しません"));
+        System.err.println("==== [DEBUG] user found: " + user.getUserId());
 
         // ===== 商品存在チェック =====
         Product product = productRepository.findByItemCode(requestDto.getItemCode())
                 .orElseThrow(() -> new IllegalArgumentException("商品が存在しません"));
+        System.err.println("==== [DEBUG] product found: " + product.getItemCode());
 
         // 再投稿防止チェック（削除済みレビューあり）
         if (!reviewRepository.findByUser_UserIdAndProduct_ItemCodeAndDeletedTrue(userId, product.getItemCode()).isEmpty()) {
+            System.err.println("==== [DEBUG] 再投稿禁止（削除済レビューあり）");
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new ApiResponseDto("削除済レビューが存在するため再投稿できません"));
         }
 
         //  再投稿防止チェック（既に投稿済み）
         if (!reviewRepository.findByProduct_ItemCodeAndUser_UserIdAndDeletedFalse(product.getItemCode(), userId).isEmpty()) {
+            System.err.println("==== [DEBUG] 再投稿禁止（既に投稿済み）");
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new ApiResponseDto("この商品には既にレビューを投稿済みです"));
         }
 
         // 購入履歴チェック
         List<Orders> orders = ordersRepository.findOrdersByUserAndItemCode(userId, product.getItemCode());
+        System.err.println("==== [DEBUG] orders.size=" + orders.size());
         if (orders.isEmpty()) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new ApiResponseDto("未購入の商品にはレビューできません"));
@@ -75,6 +81,7 @@ public class ReviewServiceImpl implements ReviewService {
         LocalDateTime oneMonthAgo = LocalDateTime.now().minusMonths(1);
         boolean purchasedWithinOneMonth =
                 ordersRepository.existsPurchaseWithinPeriod(userId, product.getItemCode(), oneMonthAgo);
+        System.err.println("==== [DEBUG] purchasedWithinOneMonth=" + purchasedWithinOneMonth);
         if (!purchasedWithinOneMonth) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new ApiResponseDto("購入後1ヶ月以内のユーザーのみレビュー可能です"));
@@ -94,6 +101,7 @@ public class ReviewServiceImpl implements ReviewService {
                 .build();
 
         Review savedReview = reviewRepository.save(review);
+        System.err.println("==== [DEBUG] review saved id=" + savedReview.getReviewId());
 
         Set<String> finalImageList = new LinkedHashSet<>();
 
@@ -101,42 +109,38 @@ public class ReviewServiceImpl implements ReviewService {
 
             // 1リクエスト内の重複URLを除去
             Set<String> uniqueUrls = new LinkedHashSet<>(requestDto.getImageList());
+            System.err.println("==== [DEBUG] imageList size=" + uniqueUrls.size());
 
             for (String imageUrl : uniqueUrls) {
                 Optional<ReviewImage> optionalReviewImage = reviewImageRepository.findByImageUrl(imageUrl);
 
-                // DBに存在しない画像はスキップ
                 if (optionalReviewImage.isEmpty()) {
-                    System.out.println("[SKIP] DBに存在しない画像: " + imageUrl);
+                    System.err.println("[SKIP] DBに存在しない画像: " + imageUrl);
                     continue;
                 }
 
                 ReviewImage reviewImage = optionalReviewImage.get();
 
-                // 他のレビューに紐付いている場合はスキップ
                 if (reviewImage.getReview() != null &&
                         !reviewImage.getReview().getReviewId().equals(savedReview.getReviewId())) {
-                    System.out.println("[SKIP] 他のレビューに紐付け済: " + imageUrl);
+                    System.err.println("[SKIP] 他のレビューに紐付け済: " + imageUrl);
                     continue;
                 }
 
-                // このレビューに既に紐付いている場合もスキップ
                 if (reviewImage.getReview() != null &&
                         reviewImage.getReview().getReviewId().equals(savedReview.getReviewId())) {
-                    System.out.println("[SKIP] このレビューに既に紐付け済: " + imageUrl);
+                    System.err.println("[SKIP] このレビューに既に紐付け済: " + imageUrl);
                     continue;
                 }
 
                 reviewImageRepository.updateReviewBindingNative(reviewImage.getId(), savedReview.getReviewId());
-
-                // 表示用URLリストに追加
                 finalImageList.add(imageUrl);
-                System.out.println("[LINKED] 紐付け完了: " + imageUrl);
+                System.err.println("[LINKED] 紐付け完了: " + imageUrl);
             }
         }
 
-        //  紐付け成功したURLのみ Review.imageList にセット（DBには保存されない）
         savedReview.setImageList(new ArrayList<>(finalImageList));
+        System.err.println("==== [DEBUG] review linked images=" + savedReview.getImageList().size());
 
         return ResponseEntity.ok(new ApiResponseDto("success"));
     }
@@ -147,13 +151,18 @@ public class ReviewServiceImpl implements ReviewService {
                 .map(ReviewImage::getImageUrl)
                 .collect(Collectors.toList());
     }
+
+
     // 商品別レビュー取得
     @Override
     public ResponseEntity<ReviewListByItemResponseDto> getReviewsByItem(String itemCode, String userId, int page, int size) {
+        System.err.println("==== [DEBUG] getReviewsByItem called itemCode=" + itemCode + " page=" + page);
+
         Page<Review> reviewPage = reviewRepository.findByProduct_ItemCodeAndDeletedFalse(
                 itemCode, PageRequest.of(page, size)
         );
         List<Review> allReviews = reviewRepository.findByProduct_ItemCodeAndDeletedFalse(itemCode);
+        System.err.println("==== [DEBUG] reviewPage=" + reviewPage.getTotalElements() + " allReviews=" + allReviews.size());
 
         Map<Integer, Long> ratingStatsMap = allReviews.stream()
                 .collect(Collectors.groupingBy(Review::getRating, Collectors.counting()));
@@ -164,8 +173,6 @@ public class ReviewServiceImpl implements ReviewService {
                     .count(ratingStatsMap.getOrDefault(i, 0L))
                     .build());
         }
-
-
 
         List<ReviewListByItemResponseDto.ReviewInfo> reviewInfos = reviewPage.getContent().stream()
                 .map(r -> ReviewListByItemResponseDto.ReviewInfo.builder()
@@ -182,6 +189,7 @@ public class ReviewServiceImpl implements ReviewService {
                         .isOwner(userId != null && userId.equals(r.getUser().getUserId()))
                         .build())
                 .collect(Collectors.toList());
+        System.err.println("==== [DEBUG] reviewInfos size=" + reviewInfos.size());
 
         ReviewListByItemResponseDto.MyReview myReview = null;
         if (userId != null) {
@@ -200,8 +208,10 @@ public class ReviewServiceImpl implements ReviewService {
                         .isOwner(userId.equals(r.getUser().getUserId()))
                         .likeCount(reviewLikeRepository.countByReviewReviewId(r.getReviewId()))
                         .build();
+                System.err.println("==== [DEBUG] myReview exists reviewId=" + r.getReviewId());
             }
         }
+
         return ResponseEntity.ok(ReviewListByItemResponseDto.builder()
                 .message("success")
                 .reviews(reviewInfos)
@@ -218,10 +228,11 @@ public class ReviewServiceImpl implements ReviewService {
     // ユーザー別レビュー取得
     @Override
     public ResponseEntity<ReviewListByUserResponseDto> getReviewsByUser(User user, int page, int size) {
+        System.err.println("==== [DEBUG] getReviewsByUser called user=" + user.getUserId());
 
         Page<Review> reviewPage = reviewRepository.findByUserAndDeletedFalse(user, PageRequest.of(page, size));
+        System.err.println("==== [DEBUG] reviewPage.total=" + reviewPage.getTotalElements());
 
-        // 画面表示用のDTOへ
         var userReviews = reviewPage.getContent().stream()
                 .map(r -> ReviewListByUserResponseDto.UserReview.builder()
                         .reviewId(r.getReviewId())
@@ -237,7 +248,8 @@ public class ReviewServiceImpl implements ReviewService {
                         .likeCount(reviewLikeRepository.countByReviewReviewId(r.getReviewId()))
                         .isOwner(true)
                         .build())
-                .toList();
+                .collect(Collectors.toList());
+        System.err.println("==== [DEBUG] userReviews size=" + userReviews.size());
 
         return ResponseEntity.ok(ReviewListByUserResponseDto.builder()
                 .message("success")
@@ -254,69 +266,57 @@ public class ReviewServiceImpl implements ReviewService {
     @Override
     @Transactional
     public ResponseEntity<ReviewDetailResponseDto> updateReview(Long reviewId, ReviewUpdateRequestDto requestDto, String userId) {
+        System.err.println("==== [DEBUG] updateReview called reviewId=" + reviewId + " userId=" + userId);
 
-        // レビュー存在チェック
         Review review = reviewRepository.findById(reviewId)
                 .orElseThrow(() -> new IllegalArgumentException("レビューが存在しません"));
 
-        // 論理削除チェック
         if (review.isDeleted()) {
             throw new IllegalArgumentException("削除済みレビューは編集できません");
         }
 
-        // 本人確認
         if (!review.getUser().getUserId().equals(userId)) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
         }
 
-        // 評価・タイトル・コメントを更新
         review.setRating(requestDto.getRating());
         review.setTitle(requestDto.getTitle());
         review.setComment(requestDto.getComment());
         review.setUpdatedAt(LocalDateTime.now());
+        System.err.println("==== [DEBUG] review updated fields");
 
-        // 既存の画像枚数を取得
         List<String> currentImages = reviewImageRepository.findAllByReview(review).stream()
                 .map(ReviewImage::getImageUrl)
                 .collect(Collectors.toList());
-
         int currentCount = currentImages.size();
+        System.err.println("==== [DEBUG] currentImages count=" + currentCount);
 
-        // 新規追加画像のURLリスト
         List<String> addUrls = requestDto.getImageList() != null
                 ? new ArrayList<>(new LinkedHashSet<>(requestDto.getImageList()))
                 : new ArrayList<>();
 
-        // 追加枚数チェック
         if (currentCount + addUrls.size() > 3) {
             throw new IllegalArgumentException("画像は最大3枚まで追加できます（超える場合は削除APIで削除してください）");
         }
 
-        // 新しい画像だけを紐付け
         for (String imageUrl : addUrls) {
             Optional<ReviewImage> optionalImage = reviewImageRepository.findByImageUrl(imageUrl);
-
-            // DBに存在しない → スキップ
             if (optionalImage.isEmpty()) continue;
 
             ReviewImage img = optionalImage.get();
-
-            // 他レビューに紐付いている → スキップ
             if (img.getReview() != null && !img.getReview().getReviewId().equals(reviewId)) continue;
 
-            // 紐付け更新
             reviewImageRepository.updateReviewBindingNative(img.getId(), reviewId);
+            System.err.println("==== [DEBUG] linked imageUrl=" + imageUrl);
         }
 
-        // 最新の画像リストを取得
         List<String> finalImageList = reviewImageRepository.findAllByReview(review).stream()
                 .map(ReviewImage::getImageUrl)
                 .collect(Collectors.toList());
-
         review.setImageList(finalImageList);
         reviewRepository.save(review);
+        System.err.println("==== [DEBUG] finalImageList size=" + finalImageList.size());
 
-        // 編集後の詳細DTOを作成して返す
         boolean isLiked = reviewLikeRepository.existsByUserUserIdAndReviewReviewId(userId, reviewId);
 
         ReviewDetailResponseDto responseDto = ReviewDetailResponseDto.builder()
@@ -340,6 +340,8 @@ public class ReviewServiceImpl implements ReviewService {
     @Override
     @Transactional
     public ResponseEntity<ApiResponseDto> deleteReview(Long reviewId, String userId) {
+        System.err.println("==== [DEBUG] deleteReview called reviewId=" + reviewId + " userId=" + userId);
+
         Review review = reviewRepository.findById(reviewId)
                 .orElseThrow(() -> new IllegalArgumentException("レビューが存在しません"));
 
@@ -349,6 +351,8 @@ public class ReviewServiceImpl implements ReviewService {
         }
         review.setDeleted(true);
         review.setUpdatedAt(LocalDateTime.now());
+        System.err.println("==== [DEBUG] review deleted id=" + reviewId);
+
         return ResponseEntity.ok(new ApiResponseDto("success"));
     }
 
@@ -357,20 +361,18 @@ public class ReviewServiceImpl implements ReviewService {
      */
     @Override
     public ResponseEntity<ReviewDetailResponseDto> getReviewDetail(Long reviewId, String currentUserId) {
-        // レビュー存在チェック
+        System.err.println("==== [DEBUG] getReviewDetail called reviewId=" + reviewId + " currentUserId=" + currentUserId);
+
         Review review = reviewRepository.findById(reviewId)
                 .orElseThrow(() -> new IllegalArgumentException("レビューが存在しません"));
 
-        // 投稿者情報
         String reviewAuthorId = review.getUser().getUserId();
-        String userNickname = review.getUser().getNickname(); // 投稿者ニックネーム
+        String userNickname = review.getUser().getNickname();
 
-        // 商品情報
         String itemCode = review.getProduct().getItemCode();
         String itemName = review.getProduct().getItemName();
-        List<String> imageUrls = review.getProduct().getImages(); // 商品画像リスト
+        List<String> imageUrls = review.getProduct().getImages();
 
-        // ログインユーザー情報
         boolean isOwner = currentUserId != null && currentUserId.equals(reviewAuthorId);
         boolean isLiked = false;
         if (currentUserId != null) {
@@ -394,6 +396,7 @@ public class ReviewServiceImpl implements ReviewService {
                 .isOwner(isOwner)
                 .build();
 
+        System.err.println("==== [DEBUG] getReviewDetail done reviewId=" + reviewId);
         return ResponseEntity.ok(detail);
     }
 }
